4.1
 * Add information whether sstables are dropped to SchemaChangeListener (CASSANDRA-17582)
 * Fix a race condition where a keyspace can be oopened while it is being removed (CASSANDRA-17658)

4.0.8
 * Connect to listen address when own broadcast address is requested (CASSANDRA-18200)
 * Add safeguard so cleanup fails when node has pending ranges (CASSANDRA-16418)
 * Fix legacy clustering serialization for paging with compact storage (CASSANDRA-17507)
 * Add support for python 3.11 (CASSANDRA-18088)
 * Fix formatting of duration in cqlsh (CASSANDRA-18141)
 * Fix sstable loading of keyspaces named snapshots or backups (CASSANDRA-14013)
 * Avoid ConcurrentModificationException in STCS/DTCS/TWCS.getSSTables (CASSANDRA-17977)
 * Restore internode custom tracing on 4.0's new messaging system (CASSANDRA-17981)
 * Harden parsing of boolean values in CQL in PropertyDefinitions (CASSANDRA-17878)
 * Fix error message about type hints (CASSANDRA-17915)
 * Fix possible race condition on repair snapshots (CASSANDRA-17955)
 * Fix ASM bytecode version inconsistency (CASSANDRA-17873)
Merged from 3.11:
 * Fix Splitter sometimes creating more splits than requested (CASSANDRA-18013)
Merged from 3.0:
 * Introduce check for names of test classes (CASSANDRA-17964)
 * Suppress CVE-2022-41915 (CASSANDRA-18147)
 * Suppress CVE-2021-1471, CVE-2021-3064, CVE-2021-4235 (CASSANDRA-18149)
 * Switch to snakeyaml's SafeConstructor (CASSANDRA-18150)
 * Expand build.dir property in rat targets (CASSANDRA-18183)
 * Suppress CVE-2022-41881 (CASSANDRA-18148)
 * Default role is created with zero timestamp (CASSANDRA-12525)
 * Suppress CVE-2021-37533 (CASSANDRA-18146)
 * Add to the IntelliJ Git Window issue navigation links to Cassandra's Jira (CASSANDRA-18126)
 * Avoid anticompaction mixing data from two different time windows with TWCS (CASSANDRA-17970)
 * Do not spam the logs with MigrationCoordinator not being able to pull schemas (CASSANDRA-18096)